# desktop_wrapper

./: .gitignore  README.md  app.py  pyproject.toml
src/: README.md
src/desktop_wrapper/: __init__.py  desktop_wrapper.py  formats.py  project.py
src/desktop_wrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
